--- a/src/client/src/common/css/main.less
+++ b/src/client/src/common/css/main.less
@@ -8,5 +8,6 @@
 @import "./common.less";
 
 // 模块样式（如需新建Action时自动导入对应样式请勿改动此区域格式）
+@import "../../mail/view.less";
 @import "../../mail/inbox.less";
 @import "../../dev/index.less";
