支持显示附件的列表，从而可以下载附件
发送邮件的功能 sent_mail 还是无法调试通过，初步估计
跟 AUTH LOGIN 的用法有关系，需要自己实现一个Class来处理
这部分的功能，默认的PlainAuth是不行的

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -20,6 +20,9 @@
 
     .list-summary-table {
         line-height: 20px;
+        td {
+            white-space: normal;
+        }
     }
 
     .list-summary {
