--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -33,5 +33,8 @@
         padding: 10px;
         border: 1px solid #bad5f1;
         border-top: none;
+        pre {
+            font-family: monospace;
+        }
     }
 }
