添加 /mail/compose 的页面，实现 /api/mail/post 的接口
初步完成调用SMTP的接口发送邮件的功能了

--- a/src/client/src/mail/compose.less
+++ b/src/client/src/mail/compose.less
@@ -9,6 +9,10 @@
         background: none;
     }
 
+    .ui-textbox-validity-invalid {
+        background-color: #FFEEAA;
+    }
+
     .subject-row {
         border: 1px solid #CFCFCF;
         border-left: none;
