在 /mail/inbox 列表添加显示附件Icon的功能
从 Gmail 里面拖下来的图片

--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -10,3 +10,10 @@
 // .my-status-denied {
 //     color: @bat-warning-color;
 // }
+
+.x-icon-attchments {
+    background: url(../img/general_black.png) no-repeat scroll 0px -254px transparent;
+    width: 16px;
+    height: 16px;
+    opacity: 0.8;
+}
