--- a/src/client/src/mail/inbox.less
+++ b/src/client/src/mail/inbox.less
@@ -4,6 +4,10 @@
  */
 
 .mail-inbox {
-
-
+    .x-icon-attchments {
+        float: right;
+        position: relative;
+        top: 2px;
+        cursor: pointer;
+    }
 }
