调整 /mail/inbox 的样式，main.go 支持定时收取邮件
实现的功能类似setInterval

--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -17,3 +17,11 @@
     height: 16px;
     opacity: 0.8;
 }
+
+.x-icon-refresh {
+    background: url(../img/general_black.png) no-repeat scroll -1px -85px transparent;
+    width: 16px;
+    height: 16px;
+    opacity: 0.8;
+    display: inline-block;
+}
