--- a/src/client/src/mail/inbox.less
+++ b/src/client/src/mail/inbox.less
@@ -10,4 +10,16 @@
         top: 2px;
         cursor: pointer;
     }
+
+
+    .list-header {
+        overflow: hidden;
+        background: #e7f1fb;
+    }
+    .list-batch {
+        float: left;
+    }
+    .list-filter {
+        float: right;
+    }
 }
