对于标记为高优先级的邮件，展示出来

--- a/src/client/src/mail/inbox.less
+++ b/src/client/src/mail/inbox.less
@@ -11,6 +11,14 @@
         cursor: pointer;
     }
 
+    .ui-table-cell-text i {
+        background-color: #ddd;
+        border: 1px solid #ddd;
+        color: red;
+        padding: 1px 3px;
+        margin-right: 5px;
+        border-radius: 3px;
+    }
 
     .list-header {
         overflow: hidden;
