--- a/src/client/src/dev/index.less
+++ b/src/client/src/dev/index.less
@@ -4,12 +4,17 @@
  */
 
 .dev-index {
+    // line-height: 1.5;
+    // font-size: 120%;
+    // h1 {
+    //     display: none;
+    // }
 
-    line-height: 1.5;
-    font-size: 120%;
-    h1 {
-        display: none;
+    .labels {
+        float: left;
     }
 
-
+    .mails {
+        float: right;
+    }
 }
