--- a/src/client/src/mail/inbox.less
+++ b/src/client/src/mail/inbox.less
@@ -4,6 +4,27 @@
  */
 
 .mail-inbox {
+    .est-layout-sidebar(left, 150px);
+
+    .est-sidebar {
+        font-size: 13px;
+
+        li {
+            padding: 5px 0;
+            padding-left: 10px;
+            &:hover {
+                background-color: rgba(243,243,243,.85);
+            }
+        }
+        li.active {
+            font-weight: bold;
+        }
+        a {
+            color: #000;
+            text-decoration: none;
+        }
+    }
+
     .x-icon-attchments {
         float: right;
         position: relative;
