升级 Operator，支持 Negative 的判断
[From, '!Contains', '@baidu.com']

--- a/src/client/src/mail/compose.less
+++ b/src/client/src/mail/compose.less
@@ -41,3 +41,11 @@
     }
 
 }
+
+.ui-dialog-body-panel {
+    .mail-compose {
+        .form-block {
+            border: none;
+        }
+    }
+}
