引入jQuery，简化代码的写法

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -36,5 +36,11 @@
         pre {
             font-family: monospace;
         }
+
+        blockquote {
+            margin: 0px 0px 0px 0.8ex;
+            border-left: 1px solid #CCC;
+            padding-left: 1ex;
+        }
     }
 }
