基本实现了MailAddressInput的控件

--- a/src/client/src/common/css/main.less
+++ b/src/client/src/common/css/main.less
@@ -7,8 +7,12 @@
 // 全局样式
 @import "./common.less";
 
+// 自定义控件样式
+@import "../../ui/MailAddressInput.less";
+
 // 模块样式（如需新建Action时自动导入对应样式请勿改动此区域格式）
 @import "../../mail/compose.less";
 @import "../../mail/view.less";
 @import "../../mail/inbox.less";
 @import "../../dev/index.less";
+
