修复 MailAddressInput getValue 的BUG

--- a/src/client/src/ui/MailAddressInput.less
+++ b/src/client/src/ui/MailAddressInput.less
@@ -8,6 +8,9 @@
     .ui-textbox {
         float: left;
     }
+    .ui-textbox input {
+        padding-left: 0;
+    }
 }
 
 .ui-mailaddressinput-preview,
