样式上的细微调整

--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -25,3 +25,10 @@
     opacity: 0.8;
     display: inline-block;
 }
+
+.ui-link-disabled {
+    color: #ccc;
+    &:hover {
+        color: #ccc;
+    }
+}
