--- a/src/client/src/mail/compose.less
+++ b/src/client/src/mail/compose.less
@@ -9,10 +9,14 @@
         background: none;
     }
 
+    .ui-mailaddressinput-validity-invalid .ui-textbox input,
     .ui-textbox-validity-invalid {
         background-color: #FFEEAA;
     }
 
+    .ui-mailaddressinput-validity-label-invalid {
+        color: #c00;
+    }
 
     .form-row {
         padding: 0;
