新增几个常用的功能
1. 标记为已读
2. 删除
3. 显式未读的数量

--- a/src/client/src/mail/compose.less
+++ b/src/client/src/mail/compose.less
@@ -7,6 +7,7 @@
     .ui-textbox input {
         border: none;
         background: none;
+        padding-left: 0;
     }
 
     .ui-mailaddressinput-validity-invalid .ui-textbox input,
