--- a/src/client/src/mail/inbox.less
+++ b/src/client/src/mail/inbox.less
@@ -8,6 +8,7 @@
 
     .est-sidebar {
         font-size: 13px;
+        padding-top: 20px;
 
         li {
             padding: 5px 0;
@@ -18,6 +19,7 @@
         }
         li.active {
             font-weight: bold;
+            background: #e7f1fb;
         }
         a {
             color: #000;
