--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -32,3 +32,15 @@
         color: #ccc;
     }
 }
+
+.ui-table-row {
+    background: rgba(243,243,243,.85);
+    color: #222;
+}
+
+.ui-table-row-unread {
+    background: rgba(255,255,255,.9);
+    .ui-table-cell-text {
+        font-weight: bold;
+    }
+}
