--- a/src/client/src/mail/compose.less
+++ b/src/client/src/mail/compose.less
@@ -10,6 +10,11 @@
         padding-left: 0;
     }
 
+    .ui-boxgroup-checkbox span {
+        position: relative;
+        top: 2px;
+    }
+
     .ui-mailaddressinput-validity-invalid .ui-textbox input,
     .ui-textbox-validity-invalid {
         background-color: #FFEEAA;
