实现了一个很丑陋的ContactsList的原型

--- a/src/client/src/ui/MailAddressInput.less
+++ b/src/client/src/ui/MailAddressInput.less
@@ -13,6 +13,18 @@
     }
 }
 
+.ui-mailaddressinput-layer {
+    z-index: 99999;
+    left: 0;
+    top: 0;
+    background: #fff;
+    width: 300px;
+}
+
+.ui-mailaddressinput-layer-hidden {
+    // display: none;
+}
+
 .ui-mailaddressinput-preview,
 .ui-mailaddressinput-preview-item {
     float: left;
