支持显示日历邀请的内容了

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -45,4 +45,11 @@
             padding-left: 1ex;
         }
     }
+
+    .mail-calendar {
+        border-spacing: 5px;
+        th, td {
+            vertical-align: top;
+        }
+    }
 }
