调整一下过滤器的内容

--- a/src/client/src/mail/inbox.less
+++ b/src/client/src/mail/inbox.less
@@ -16,6 +16,9 @@
             &:hover {
                 background-color: rgba(243,243,243,.85);
             }
+            b {
+                color: #333;
+            }
         }
         li.active {
             font-weight: bold;
