添加查看已删除邮件的功能

--- a/src/client/src/mail/inbox.less
+++ b/src/client/src/mail/inbox.less
@@ -37,6 +37,10 @@
         cursor: pointer;
     }
 
+    .ui-table-cell-text {
+        white-space: nowrap;
+    }
+
     .ui-table-cell-text i {
         background-color: #ddd;
         border: 1px solid #ddd;
