几个小的功能升级和BUG修复
1. 展示日历邀请时候的格式改进，忽略掉一些暂时没意义的字段
2. RFC2047.Decode的升级，可以支持编码和非编码内容混杂在一起的情况

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -51,5 +51,9 @@
         th, td {
             vertical-align: top;
         }
+        th {
+            width: 100px;
+            text-align: right;
+        }
     }
 }
