修复 mail.go 解析邮件体时候的问题
如果邮件中有多种类型的内容，比如 text/plain, text/html, text/calendar
优先使用 text/html，如果没有的话，考虑使用 text/plain，如果还是没有的
话，就看看那种类型的长度最长，就用哪种

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -54,6 +54,10 @@
         th {
             width: 100px;
             text-align: right;
+            color: gray;
+        }
+        pre {
+            padding: 10px 0;
         }
     }
 }
