添加了搜索的功能，不过还不能自动添加和删除索引，需要开放API

--- a/src/client/src/common/css/main.less
+++ b/src/client/src/common/css/main.less
@@ -14,5 +14,6 @@
 @import "../../mail/compose.less";
 @import "../../mail/view.less";
 @import "../../mail/inbox.less";
+@import "../../mail/search.less";
 @import "../../dev/index.less";
 
