重构 mail.NewMail 的实现逻辑，精简了部分代码
修复了转发和回复邮件的时候，本来应该放到cid的东西，结果放到att里面去了
现在的方案是最后通过扫描 email.Message 的内容来决定是放到att还是cid，应
该更加准确了

--- a/src/client/src/mail/search.less
+++ b/src/client/src/mail/search.less
@@ -19,7 +19,17 @@
 
     .list-header,
     .list-batch,
-    .list-filter {
-        border-color: darken(wheat, 20%);
+    .list-filter,
+    .ui-pager,
+    .ui-table .ui-table-head table,
+    .ui-table .ui-table-body table,
+    .ui-table .ui-table-foot table,
+    .ui-table .ui-table-head,
+    .ui-table .ui-table-body,
+    .ui-table .ui-table-foot,
+    .ui-table .ui-table-cell,
+    .ui-table .ui-table-hcell,
+    .ui-table .ui-table-row {
+        border-color: darken(wheat, 5%);
     }
 }
