修复 MailAddressInput 的一个BUG，另外收到邮件之后可以自动添加索引
通过调用 searcher.go 的API，把新邮件的ID传递过去，searcher.go自动
添加索引，现阶段没有删除的事情，因为 mail_search.go 的时候会过滤掉
已经被删除的邮件，所以暂时不需要从索引中删除

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -44,6 +44,11 @@
             border-left: 1px solid #CCC;
             padding-left: 1ex;
         }
+
+        img {
+            max-width: 80%;
+            max-height: 80%;
+        }
     }
 
     .mail-calendar {
