可以查看Thread/List和Thread/View的页面了

--- a/src/client/src/common/css/main.less
+++ b/src/client/src/common/css/main.less
@@ -15,5 +15,6 @@
 @import "../../mail/view.less";
 @import "../../mail/inbox.less";
 @import "../../mail/search.less";
+@import "../../thread/list.less";
+@import "../../thread/view.less";
 @import "../../dev/index.less";
-
