--- a/src/client/src/thread/view.less
+++ b/src/client/src/thread/view.less
@@ -4,10 +4,21 @@
  */
 
 .thread-view {
+    border-bottom: 1px solid #bad5f1;
+
     .mail-view {
         .mail-body {
             border-bottom: none;
         }
     }
-    border-bottom: 1px solid #bad5f1;
+
+    .mail-body-summary {
+        float: left;
+        /*display: block;*/
+        max-width: 700px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        color: gray;
+    }
 }
