在thread/view里面支持展开更多的样式了

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -69,12 +69,28 @@
             padding: 10px 0;
         }
     }
+
+    .view-actions {
+        display: inline;
+    }
+
+    .mail-body-summary {
+        display: none;
+    }
 }
 
 
 .mail-view-collapse {
     .mail-body {
         display: none;
+    }
+
+    .view-actions {
+        display: none;
+    }
+
+    .mail-body-summary {
+        display: inline;
     }
 
     .list-summary-table tr {
