添加只看未读的功能

--- a/src/client/src/common/css/main.less
+++ b/src/client/src/common/css/main.less
@@ -1,5 +1,5 @@
 @import "../../../dep/esui/3.1.0-beta.3/src/css/main.less";
-@import "../../../dep/est/1.2.2/src/all.less";
+@import "../../../dep/est/1.3.0/src/all.less";
 @import "../../../dep/esf-ms/1.0.2/src/main.less";
 @import "../../../dep/bat-ria/0.2.1/src/css/main.less";
 
@@ -9,6 +9,7 @@
 
 // 自定义控件样式
 @import "../../ui/MailAddressInput.less";
+@import "../../ui/SimpleToggleButton.less";
 
 // 模块样式（如需新建Action时自动导入对应样式请勿改动此区域格式）
 @import "../../mail/compose.less";
