--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -7,7 +7,7 @@
     .mail-subject {
         h2 {
             font-size: 18px;
-            margin: 12px 0 9px;
+            margin: 5px 0;
             display: inline-block;
         }
 
@@ -34,7 +34,7 @@
         border-bottom: 1px solid #bad5f1;
     }
 
-    > .mail-body {
+    .mail-body {
         padding: 10px;
         border: 1px solid #bad5f1;
         border-top: none;
