支持pop3.delete_older_mails的配置，可以删除指定天数之前的邮件

--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -75,3 +75,8 @@
 .ui-table-row-selected table {
     background: #ffc;
 }
+
+.ui-table-select-all,
+.ui-table-multi-select {
+    margin: 0 auto;
+}
