--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -43,6 +43,8 @@
         border-top: none;
         font-size: 120%;
         position: relative;
+        overflow: scroll;
+        min-height: 400px;
         pre {
             font-family: monospace;
             word-wrap: break-word;
