修复tools/fix_contacts.go的问题

--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -93,6 +93,14 @@
     margin: 0 auto;
 }
 
+.ui-commandmenu {
+    border-color: #ccc;
+    border-radius: 2px;
+    height: 23px;
+    line-height: 23px;
+    padding: 0 6px 0 10px;
+}
+
 .btns {
     margin-bottom: 15px;
     text-align: left;
