选择邮件All, None, Read, Unread, Starred, Unstarred

--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -101,11 +101,19 @@
     padding: 0 6px 0 10px;
 }
 
+.ui-commandmenu-layer {
+    background: -webkit-linear-gradient(top, #f6f6f6, #ffffff);
+    background: -moz-linear-gradient(top, #f6f6f6, #ffffff);
+    border-color: #ccc;
+    border-top: none;
+}
+
 .btns {
     margin-bottom: 15px;
     text-align: left;
     .skin-spring-add-button {
         background: -webkit-linear-gradient(top, #6cbb4c, #519c30);
+        background: -moz-linear-gradient(top, #6cbb4c, #519c30);
         padding: 0 13px 0 13px;
     }
 }
