初步用ckeditor代替ueditor

--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -117,3 +117,12 @@
         padding: 0 13px 0 13px;
     }
 }
+
+.cke {
+    box-shadow: none !important;
+    border-color: #ccc !important;
+}
+
+.cke_bottom {
+    background: rgba(204, 204, 204, .2) !important;
+}
