修复新增和转发附件的问题

--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -108,6 +108,11 @@
     border-top: none;
 }
 
+.skin-mini-button {
+    height: 12px;
+    line-height: 12px;
+}
+
 .btns {
     margin-bottom: 15px;
     text-align: left;
