--- a/src/client/src/mail/compose.less
+++ b/src/client/src/mail/compose.less
@@ -12,7 +12,7 @@
 
     .ui-boxgroup-checkbox span {
         position: relative;
-        top: 2px;
+        top: 0px;
     }
 
     .ui-mailaddressinput-validity-invalid .ui-textbox input,
@@ -55,6 +55,16 @@
         border-bottom: 1px solid #BAD5F1;
         background-image: -webkit-gradient(linear, 0 0, 0 2, from(#ececec), to(#ffffff));
         background-image: -moz-linear-gradient(top, #ececec, #ffffff 2px, #ffffff);
+    }
+
+    .ui-boxgroup-horizontal {
+        min-height: 25px;
+    }
+
+    .skin-mini-button {
+        position: relative;
+        top: 7px;
+        margin-left: 0px;
     }
 }
 
