--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -10,6 +10,10 @@
             padding-top: 10px;
             padding-left: 10px;
             display: inline-block;
+            max-width: 550px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         a {
