Add custom loading notification

--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -29,6 +29,17 @@
     }
 }
 
+#loading {
+    position: fixed;
+    top: 18px;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    span {
+        font-weight: bold;
+    }
+}
+
 .x-icon-star4,
 .x-icon-star-lit4 {
     width: 19px;
