修改某些Tag无法过滤出邮件的问题

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -43,6 +43,7 @@
 
     .mail-body {
         padding: 10px;
+        line-height: 1.5;
         border: 1px solid #bad5f1;
         border-top: none;
         font-size: 120%;
@@ -62,6 +63,14 @@
 
         img {
             max-width: 80%;
+        }
+
+        ol, ul {
+            list-style-type: disc;
+            list-style-position: inside;
+            li {
+                padding-left: 15px;
+            }
         }
     }
 
