对于pcs存储失败的文件，可以手工重新上传一下

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -96,6 +96,12 @@
     .mail-body-summary {
         display: none;
     }
+
+    .fa-cloud-upload {
+        cursor: pointer;
+        position: relative;
+        top: 1px;
+    }
 }
 
 
