--- a/src/client/src/mail/inbox.less
+++ b/src/client/src/mail/inbox.less
@@ -25,6 +25,16 @@
         border-radius: 3px;
     }
 
+    .ui-table-cell-text i.fa {
+        color: #000;
+        background: transparent;
+        padding: 0;
+        margin: 0;
+        border-radius: 0;
+        border: none;
+        cursor: pointer;
+    }
+
     .list-header {
         overflow: hidden;
         background: #e7f1fb;
