更新README.md，去掉elasticsearch相关的内容

--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -30,8 +30,9 @@
 }
 
 header {
-    background-color: #f1f1f1;
+    background-color: #79BAFB;
     padding: 10px 0;
+    color: #fff;
 
     .x-logo {
         display: inline-block;
@@ -39,12 +40,8 @@ header {
         em {
             font-family: 'Playball', cursive;
             font-size: 2.5em;
-            text-shadow: 2px 2px #fff;
+            text-shadow: 2px 2px #000;
         }
-    }
-
-    a {
-        color: #000 !important;
     }
 }
 
