Add Playfair Display fonts

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -50,6 +50,7 @@
         position: relative;
         overflow: scroll;
         min-height: 400px;
+        font-family: 'Playfair Display', serif, sans-serif;
 
         pre {
             word-wrap: break-word;
