初次启动的时候，自动跳转到设置页面可以正常工作了

--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -37,6 +37,10 @@ header {
     .x-logo {
         display: inline-block;
         padding-left: 10px;
+        a {
+            text-decoration: none;
+            color: #fff;
+        }
         em {
             font-family: 'Playball', cursive;
             font-size: 2.5em;
@@ -52,8 +56,15 @@ header {
     text-align: center;
 }
 
+#main center {
+    padding-top: 200px;
+}
+
 .fa-3 {
     font-size: 3em;
+}
+.fa-4 {
+    font-size: 7em;
 }
 
 .ui-link-disabled {
