--- a/src/client/src/common/css/main.less
+++ b/src/client/src/common/css/main.less
@@ -19,3 +19,4 @@
 @import "../../thread/list.less";
 @import "../../thread/view.less";
 @import "../../dev/index.less";
+@import "../../user/settings.less";
