--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -83,6 +83,10 @@ header {
     color: #222;
 }
 
+.ui-table-row:hover {
+    background: #FFFFF4;
+}
+
 .ui-table-row-unread {
     background: rgba(255,255,255,.9);
     .ui-table-cell-text {
