开始添加处理日历邀请的逻辑, Yes, Maybe, No

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -50,7 +50,6 @@
         position: relative;
         overflow: scroll;
         min-height: 400px;
-        font-family: 'Playfair Display', serif, sans-serif;
 
         pre {
             word-wrap: break-word;
@@ -77,16 +76,15 @@
 
     .mail-calendar {
         border-spacing: 5px;
+        background: #E1F2F9;
+        margin-bottom: 8px;
+
         th, td {
             vertical-align: top;
         }
         th {
-            width: 100px;
-            text-align: right;
-            color: gray;
-        }
-        pre {
-            padding: 10px 0;
+            width: 15px;
+            text-align: center;
         }
     }
 
