可以在磁盘里面缓存emailDateMap的数据，方便重启的时候直接使用

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -53,6 +53,16 @@
 
         pre {
             word-wrap: break-word;
+            font-family: monospace;
+            padding: 10px 0;
+        }
+
+        hr {
+            height: 4px;
+            padding: 0;
+            margin: 16px 0;
+            background-color: #e7e7e7;
+            border: 0 none;
         }
 
         blockquote {
