--- a/src/client/src/common/css/common.less
+++ b/src/client/src/common/css/common.less
@@ -141,3 +141,8 @@ header {
 .cke_bottom {
     background: rgba(204, 204, 204, .2) !important;
 }
+
+.ui-pager-main li {
+    width: auto;
+    padding: 0 8px;
+}
