--- a/src/client/src/common/css/preview.less
+++ b/src/client/src/common/css/preview.less
@@ -1,19 +1,19 @@
-table {
+.xlsx-table {
   table-layout: fixed;
   border-collapse: collapse;
   border: 1px solid #ccc;
   font-size: 12px;
+
+  td {
+    width: 80px;
+    height: 14px;
+    overflow: hidden;
+    white-space: nowrap;
+    border-color: #ccc;
+  }
 }
 
-td {
-  width: 80px;
-  height: 14px;
-  overflow: hidden;
-  white-space: nowrap;
-  border-color: #ccc;
-}
-
-.navs {
+.xlsx-navs {
   padding: 0;
   margin: 0;
   overflow: hidden;
@@ -25,11 +25,22 @@ td {
     text-decoration: underline;
     cursor: pointer;
     color: #999;
+    line-height: 1;
   }
   li.active {
     color: #000;
     font-weight: bold;
     text-decoration: none;
     cursor: default;
+  }
+}
+
+.entry {
+  max-width: 960px;
+  table {
+    margin: auto 0;
+    width: 100%;
+    table-layout: fixed;
+    font-size: 90%;
   }
 }
