修复 rebuild.go 的功能
如果需要修复数据库中的邮件，可以在 v2 目录下面执行
go run ../tools/rebuild.go -help

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -71,6 +71,16 @@
             padding-left: 1ex;
         }
 
+        table {
+            table-layout: fixed;
+            border-collapse: collapse;
+            border: 1px solid #ccc;
+            td {
+                border: 1px solid #ccc;
+                padding: 5px;
+            }
+        }
+
         img {
             max-width: 80%;
         }
