修复附件查看链接的转码问题以及日历页面表格的样式错乱

--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -98,9 +98,13 @@
         border-spacing: 5px;
         background: #E1F2F9;
         margin-bottom: 8px;
+        border-collapse: separate !important;
+        border: none !important;
 
         th, td {
             vertical-align: top;
+            border: none !important;
+            padding: 0 !important;
         }
         th {
             width: 15px;
