处理了 docx 中表格 colspan 和 rowspan 属性生成的问题
根据 table_layout 中记录的数据，可以准确的从 output 里面回溯到之前的 td
，然后设置正确的 rowspan 和 colspan 的值

--- a/src/client/src/common/css/preview.less
+++ b/src/client/src/common/css/preview.less
@@ -80,9 +80,10 @@ html, body {
         font-size: 90%;
         border-collapse: collapse;
         border: 1px solid #ccc;
+        border-spacing: 0;
     }
     td {
         padding: 5px;
-        border-color: #ccc;
+        border: 1px solid #ccc;
     }
 }
