支持了基本的样式解析，b/u/i/color/background-color

--- a/src/client/src/common/css/preview.less
+++ b/src/client/src/common/css/preview.less
@@ -81,6 +81,12 @@ html, body {
         border-collapse: collapse;
         border: 1px solid #ccc;
         border-spacing: 0;
+
+        p {
+            display: inline;
+            padding: 0;
+            margin: 0;
+        }
     }
     td {
         padding: 5px;
