处理docx文档中内嵌图片的显示

--- a/src/client/src/common/css/preview.less
+++ b/src/client/src/common/css/preview.less
@@ -58,6 +58,7 @@ html, body {
 
 .docx-inner {
     width: 816px;
+    min-height: 600px;
     margin: 0 auto;
     background: #fff;
     padding: 50px 0;
