--- a/src/client/src/mail/view.less
+++ b/src/client/src/mail/view.less
@@ -57,6 +57,10 @@
             padding: 10px 0;
         }
 
+        pre.ct-text-plain {
+            font-family: arial,sans-serif;
+        }
+
         hr {
             height: 4px;
             padding: 0;
